src/test/deca/syntax/valid/parser/black-box/empty_program.deca
// Description:
//    test of empty program
//
// Results:
//    test_lex --> no error, return 2 tokens
//    test_synt --> no error, return basic tree with main
//
// History:
//    created on 04/01/2022

{
}