src/test/deca/syntax/invalid/test_dir/added/parser/closing_comment.deca
// Description:
//    test with too much closing comment
//
// Results:
//    test_synt --> error line 10
//
// History:
//    created on 04/01/2022

/* */ */